changed execute to compile
SSP-24 #comment changed execute to compile #resolve

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                         <inherited>false</inherited>
                         <executions>
                             <execution>
-                                <phase>validate</phase>
+                                <phase>compile</phase>
                                 <goals>
                                     <goal>execute</goal>
                                 </goals>
