test compile to execute change
SSP-24 #comment test compile to execute change #Done

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     
     
     <build>
-        <defaultGoal>compile</defaultGoal>
+        <defaultGoal>execute</defaultGoal>
     </build>
 
     <profiles>
