SSP-24 #comment validate to compile change #reslove

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     
     
     <build>
-        <defaultGoal>execute</defaultGoal>
+        <defaultGoal>VALIDATE</defaultGoal>
     </build>
 
     <profiles>
